hide menu bar & fixed overflow issue

--- a/de/styles/style.css
+++ b/de/styles/style.css
@@ -14,6 +14,7 @@ body {
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    overflow: hidden;
 }
 
 /* Temporary */
